@@ -20,7 +20,7 @@ if (MUMPS_INCLUDE_DIR)
 endif (MUMPS_INCLUDE_DIR)
 
 # Check for header file
-#find_path(MUMPS_INCLUDE_DIR dmumps_c.h mpi.h
+# find_path(MUMPS_INCLUDE_DIR dmumps_c.h mpi.h
 # HINTS ${MUMPS_DIR}/include ${MUMPS_DIR}/libseq $ENV{MUMPS_DIR}/include $ENV{IPOPT_HOME}/MUMPS/include/
 find_path(MUMPS_INCLUDE_DIR dmumps_c.h
  HINTS ${MUMPS_DIR}/include $ENV{MUMPS_DIR}/include $ENV{IPOPT_HOME}/MUMPS/include/
